use modern list implems