@@ -13,9 +13,7 @@
  */
 package ai.startree.thirdeye.plugins.datasource.pinot.resultset;
 
-import com.google.common.collect.ImmutableList;
 import java.util.List;
-import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.builder.ToStringBuilder;
 import org.apache.pinot.client.ResultSetGroup;
 
@@ -26,7 +24,8 @@ import org.apache.pinot.client.ResultSetGroup;
  */
 public class ThirdEyeResultSetGroup {
 
-  private ImmutableList<ThirdEyeResultSet> resultSets = ImmutableList.of();
+  // the list implementation should be immutable
+  private List<ThirdEyeResultSet> resultSets = List.of();
 
   public ThirdEyeResultSetGroup(List<ThirdEyeResultSet> resultSets) {
     this.setResultSets(resultSets);
@@ -41,11 +40,7 @@ public class ThirdEyeResultSetGroup {
   }
 
   public void setResultSets(List<ThirdEyeResultSet> resultSets) {
-    if (CollectionUtils.isNotEmpty(resultSets)) {
-      this.resultSets = ImmutableList.copyOf(resultSets);
-    } else {
-      this.resultSets = ImmutableList.of();
-    }
+    this.resultSets = List.copyOf(resultSets);
   }
 
   public List<ThirdEyeResultSet> getResultSets() {
